fixed pagination on mobile

--- a/public/assets/css/chat.less
+++ b/public/assets/css/chat.less
@@ -19,8 +19,8 @@
   .conversation {
     width: 35%;
     border: 1px solid #9999;
-    height:90vh;
-    overflow-y: auto ;
+    height: 90vh;
+    overflow: hidden;
     @media @mobile {
       width: 96%;
       margin-left: 7px;
